<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">LocalJobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add">Add</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_proposals">Proposals</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_hint">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="publish">Publish</string>
    <string name="radio_job">Job</string>
    <string name="radio_proposal">Proposal</string>
    <string name="add_type">Type: </string>
    <string name="range_text_view">Range: </string>
    <string name="salary_edit_text">Salary</string>
    <string name="price_per_hour">€/h</string>
    <string name="type_tag_job">job</string>
    <string name="type_tag_proposal">proposal</string>
    <string name="distance">"%1$d km"</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_search">Search</string>
    <string name="filter_query_hint">Search for:</string>
    <string name="filter_reset_default">Reset default</string>
    <string name="filter_range_text">Range:</string>
    <string name="mabBoxToken">pk.eyJ1IjoibHVjYW1vcm8iLCJhIjoiY2p2aWZpMjF3MDUydDQ4cnV1aXNoajg3aCJ9.oHLaI83cBQT1TzikU6oA8Q</string>
    <string name="minimum_salary_text">Minimum salary</string>
    <string name="location">Location</string>
    <string name="add_job_success">Successfully added job!</string>
    <string name="add_job_failure">Error adding job :(</string>
    <string name="auth_required">You must be authenticated to use this function</string>
    <string name="coordinates">%1$s, %2$s</string>
    <string name="position_unknown_toast">Last position unknown</string>
    <string name="error_retrieving_location_name">Could not retrieve location name</string>
    <string name="no_price_info">No information about the price</string>
    <string name="menu_map">Map</string>
    <string name="filters_button">Filters</string>
    <string name="location_icon_description">location_icon</string>
    <string name="unknown_location">Unknown location</string>
    <string name="location_status">%1$d kilometers from %2$s</string>
    <string name="delete_button">Delete</string>
    <string name="edit_job_failure">Failed editing:</string>
    <string name="edit_job_success">Successfully edited job!</string>
    <string name="delete_job_failure">Failed to delete:</string>
    <string name="delete_job_success">Successfully deleted!</string>
    <string name="edit_no_changes_detected">You should change something!</string>
    <string name="contact">Send your interest</string>
    <string name="default_notification_channel_id">localjobs_channel_id</string>
    <string name="fcm_message">New request</string>
    <string name="salary">%1$s £/h</string>
    <string name="contacted">Contacted</string>
    <string name="maximum_salary_text">Maximum salary</string>
    <string name="loading">Loading..</string>
    <string name="empty_view_title">No jobs nearby</string>
    <string name="empty_view_description">We couldn\'t find any jobs in your search area. Try changing your location.</string>
    <string name="share_job_title">Share this job!</string>
    <string name="share_job_text">Title: %1$s\nDescription: %2$s\nCity: %3$s\nGo to LocalJobs app to apply for this job!</string>
    <string name="intro_title">Welcome to LocalJobs</string>
    <string name="intro_description">Search for jobs in your area!</string>
    <string name="permission_tab_title">Permissions</string>
    <string name="permission_tab_description">We need your permission to access your location</string>
    <string name="user_not_found">User not found</string>
    <string name="image">Image</string>
    <string name="interested_people">Interested people:</string>
    <string name="job_author">Author:</string>
    <string name="in_the_past">In the past</string>
    <string name="user_jobs_title">%1$s\'s stuff</string>
    <string name="jobs_and_proposals_button">Jobs and proposals</string>
    <string name="favorites_button">Favorites</string>
    <string name="favorites_title">Favorites</string>
    <string name="empty_favorites_title">Empty favorites!</string>
</resources>
