<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FiltersFragment">

    <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/type_radio_group"
                android:checkedButton="@id/radio_job">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_type"/>
        <RadioButton android:id="@+id/radio_job"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_job"
                     android:tag="@string/type_tag_job"/>
        <RadioButton android:id="@+id/radio_proposal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_proposal"
                     android:tag="@string/type_tag_proposal"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/type_radio_group"
            android:id="@+id/range_div"
            android:layout_margin="10dp">

        <TextView
                android:id="@+id/range_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/filter_range_text"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/range_seek_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@id/range_text_view"
                app:layout_constraintRight_toLeftOf="@id/range_value"/>

        <TextView
                android:id="@+id/range_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/salary_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/minimum_salary_text"
            app:layout_constraintTop_toBottomOf="@id/range_div"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/price_per_hour"
            app:startIconDrawable="@drawable/ic_money_24px">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/min_salary_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/price_per_hour"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/range_div"
            app:layout_constraintLeft_toRightOf="@id/salary_view"
            app:layout_constraintBottom_toTopOf="@id/location_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_per_hour"
            android:layout_marginEnd="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_place_black_24dp"
            android:hint="@string/location"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/salary_view"
            app:layout_constraintBottom_toTopOf="@id/fragment_buttons"
            android:id="@+id/location_view">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filter_location_edit_text"
                android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/fragment_buttons">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/apply_button"
                android:layout_margin="20dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/apply_button"
                android:text="@string/apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/cancel_button"
                android:layout_margin="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>