<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AddFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RadioGroup android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/type_radio_group">
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_type"/>
                <RadioButton android:id="@+id/radio_job"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/radio_job"/>
                <RadioButton android:id="@+id/radio_proposal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/radio_proposal"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/type_radio_group"
                    android:id="@+id/title_edit_text">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_place_black_24dp"
                    android:hint="@string/address"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
                    android:id="@+id/address_edit_text">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/range_text_view"
                    android:id="@+id/range_text_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_edit_text"
                    android:layout_margin="10dp"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/address_edit_text"
                    app:layout_constraintLeft_toRightOf="@id/range_text_view"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/description_edit_text"
                    android:id="@+id/range_seekbar"
                    android:layout_margin="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/description"
                    app:layout_constraintTop_toBottomOf="@id/range_seekbar"
                    app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="bottom|center"
            android:text="@string/publish"/>

</FrameLayout>